# utf8lib

./: README.md
include/: utf8.h
src/: CMakeLists.txt  tests.c  utf8.c
tests/: CMakeLists.txt
